Avancement de spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@
 # ==============================================================
 # = Spring MVC Configuration
 # ==============================================================
-spring.mvc.view.prefix = /templates
+spring.mvc.view.prefix = /resources/templates/
 spring.mvc.view.suffix = .html
